finish project Login Register Profile

--- a/MyProject/src/php/formEmailSend.html
+++ b/MyProject/src/php/formEmailSend.html
@@ -61,12 +61,12 @@
                     <td>
                         <br/>
                         Regards,<br/>
-                        iTech Empires
+                        Eway
                     </td>
                 </tr>
                 <tr>
                     <td class="footer">
-                        © 2016 iTech Empires. All rights reserved.
+                        © 2020 Eway. All rights reserved.
                     </td>
                 </tr>
             </table>
